Alterando as classes principais para poder pegar os dados do sistema com a API OSHI HARDWARE E SOFTWARE. Feat: Ordenando itens com base em nome, patrimonio, etc. Feat: Atulizando dashboard com itens adicionandos e seus status. Feat: Refatorando classes.